--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Виджет</title>
 </head>
 <body>
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="./script.js"></script>
 </body>
 </html>
